[package]
name = "web3-this-then-that"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
deadpool-redis = { version = "0.12.0", features = ["rt_tokio_1", "serde"] }
derivative = "2.2.0"
dotenv = "0.15.0"
ethers = { version = "2.0.8", features = ["rustls", "ws"] }
futures = "0.3.28"
reqwest = { version = "0.11", features = ["json", "rustls-tls-native-roots"], default-features = false }
sentry = { version = "0.31.5",  features = ["anyhow", "backtrace", "contexts", "panic", "reqwest", "rustls", "serde_json", "tracing"], default-features = false }
sentry-tracing = "0.31.5"
serde = "1.0.180"
serde_json = "1.0.104"
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
env_logger = "0.10"
test-log = { version = "0.2.12", default-features = false, features = ["trace"] }
tokio = { version = "1.29.1", features = ["full", "test-util"] }
tracing = {version = "0.1", default-features = false}
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}
